cluster/default/echo/echo.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-echo
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/auth-url: https://gate.sko.ai/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://gate.sko.ai/
    nginx.ingress.kubernetes.io/configuration-snippet: |
      auth_request_set $user $upstream_http_remote_user;
      auth_request_set $groups $upstream_http_remote_groups;
      proxy_set_header Remote-User $user;
      proxy_set_header Remote-Groups $groups;
      proxy_set_header Remote-Groups $groups;
spec:
  rules:
    - host: echo.sko.ai
      http:
        paths:
          - backend:
              serviceName: echo
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - echo.sko.ai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: openresty/openresty:1.19.9.1-1-alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/local/openresty/nginx/conf/nginx.conf
              subPath: nginx.conf
              readOnly: true
              name: echo-conf
      volumes:
        - name: echo-conf
          configMap:
            name: echo-conf
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: echo
